--- a/package.json
+++ b/package.json
@@ -7,9 +7,13 @@
     "@testing-library/jest-dom": "^5.16.2",
     "@testing-library/react": "^12.1.4",
     "@testing-library/user-event": "^13.5.0",
+    "core-js": "^3.21.1",
     "eslint": "^8.10.0",
+    "fetch-mock": "^9.11.0",
     "husky": "^7.0.4",
+    "jest": "^27.5.1",
     "lint-staged": "^12.3.5",
+    "node-fetch": "^3.2.3",
     "prettier": "^2.5.1",
     "prop-types": "^15.8.1",
     "react": "^17.0.2",
@@ -29,6 +33,7 @@
     "build": "react-scripts build",
     "deploy": "gh-pages -d build",
     "eslint": "eslint **/*.{js,jsx}",
+    "test": "jest",
     "eject": "react-scripts eject"
   },
   "lint-staged": {
@@ -75,6 +80,7 @@
     "html-loader": "^3.1.0",
     "html-webpack-plugin": "^5.5.0",
     "mini-css-extract-plugin": "^2.6.0",
+    "redux-mock-store": "^1.5.4",
     "sass-loader": "^12.6.0",
     "webpack": "^5.70.0",
     "webpack-cli": "^4.9.2",
