--- a/package.json
+++ b/package.json
@@ -32,7 +32,7 @@
     "webpack": "webpack-dev-server --config config/webpack.dev.js",
     "build": "react-scripts build",
     "deploy": "gh-pages -d build",
-    "eslint": "eslint **/*.{js,jsx}",
+    "eslint": "eslint src/**/*.{js,jsx}",
     "test": "jest",
     "eject": "react-scripts eject"
   },
